_src-lp/blocks/b-productswithinputdevices/b-productswithinputdevices.scss
/* ... */
.b-productswithinputdevices-container.bf2024 .b-productswithinputdevices-wrapper .b-productswithinputdevices {
  margin-top: 11em;
  background: #ECECEC;
}

.b-productswithinputdevices-container .b-productswithinputdevices-wrapper .b-productswithinputdevices fieldset button {
  color: black;
}

.b-productswithinputdevices-container.bf2024 .b-productswithinputdevices-wrapper .b-productswithinputdevices > div:nth-child(2) > div .prod-taxes {
  color: #A1A2A2;
}

.b-productswithinputdevices-container .b-productswithinputdevices-wrapper .b-productswithinputdevices > div > div:has(fieldset) {
    max-width: 80%;
    margin: auto;

    h3 {
      flex-wrap: wrap;
    }
}

@media (width <= 1400px) {
  .b-productswithinputdevices-container #campaign-logo {
    width: 15em;
    margin-left: 0;
  }
}

@media (width <= 1100px) {
  .b-productswithinputdevices-container.bf2024 .b-productswithinputdevices-wrapper .prod-percent.green_bck_circle {
    right: 2em;
    top: -24px;
    left: auto;
    width: 128px;
    height: 96px
  }
}

@media (width <= 991px) {
  .b-productswithinputdevices-container #campaign-logo {
    width: 15em;
    margin: 0 auto;
    position: relative;
  }
  .b-productswithinputdevices-container .b-productswithinputdevices-wrapper .b-productswithinputdevices.has-campaign-logo {
    margin-top: 1em;
  }
}

/* for mobile */
@media (width <= 768px) {
  .b-productswithinputdevices-container .b-productswithinputdevices-wrapper .prod-percent.green_bck_circle {
    display: flex;
    border-radius: 10px;
    width: 100%;
    position: unset;
    text-align: center;
    height: auto;
    padding: 10px;
    justify-content: center;
    flex-direction: row;
    font-size: 23px;
  }

  .b-productswithinputdevices-container .b-productswithinputdevices-wrapper .prod-percent.green_bck_circle b {
    margin-right: 10px;
    font-size: 30px;
  }

  .b-productswithinputdevices-container .b-productswithinputdevices-wrapper .b-productswithinputdevices {
    background: #e3f1ff;
    color: #666;
    height: auto;
    padding: 1em 15px;
    border-radius: 8px;
    margin: 1em 0;
  }

  .b-productswithinputdevices-container .b-productswithinputdevices-wrapper .b-productswithinputdevices .prod-percent.green_bck_circle {
    top: -32px;
    border-radius: 50px;
    flex-direction: column;
  }

  .b-productswithinputdevices-container .b-productswithinputdevices-wrapper .b-productswithinputdevices .prod-percent.green_bck_circle b {
    margin-right: 5px;
  }

  .b-productswithinputdevices-container .b-productswithinputdevices-wrapper .b-productswithinputdevices .prod-percent.green_bck_circle p {
    font-size: 18px;
  }

  .b-productswithinputdevices-container .b-productswithinputdevices-wrapper .b-productswithinputdevices > div:nth-child(1) h4 {
    font: normal normal normal 24px/28px Roboto, sans-serif;
    color: #000;
    margin: 10px 0;
  }

  .b-productswithinputdevices-container .b-productswithinputdevices-wrapper .b-productswithinputdevices > div:nth-child(2) {
    display: block;
  }

  .b-productswithinputdevices-container .b-productswithinputdevices-wrapper .b-productswithinputdevices > div:nth-child(2) > div {
    width: auto;
    margin-bottom: 2em;
  }

  .b-productswithinputdevices-container.second-template {
    .b-productswithinputdevices {
      max-width: 330px;
      margin: 0;
      padding: 0;

      > div:nth-child(2) > div {
        margin: 0;
      }
    }
  }
}

